tests/baselines/reference/typePredicatesOptionalChaining1.errors.txt
typePredicatesOptionalChaining1.ts(10,10): error TS99999: Function was inferred to be a type guard


==== typePredicatesOptionalChaining1.ts (1 errors) ====
    type X = {
      y?: {
        z?: string;
      };
    };
    const x: X = {
      y: {},
    };
    // type guard
    function isNotNull<A>(x: A): x is NonNullable<A> {
             ~~~~~~~~~
!!! error TS99999: Function was inferred to be a type guard
      return x !== null && x !== undefined;
    }
    // function which I want to call in the result of the expression
    function title(str: string) {
      return str.length > 0 ? "Dear " + str : "Dear nobody";
    }
    
    isNotNull(x?.y?.z) ? title(x.y.z) : null; // should not error
    